k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techdomov
  labels:
    app.kubernetes.io/name: techdomov
    app.kubernetes.io/part-of: multishoping
