k8s/redis-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: techdomov
  labels:
    app.kubernetes.io/name: techdomov
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app.kubernetes.io/name: techdomov
    app.kubernetes.io/component: redis

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: techdomov
  labels:
    app.kubernetes.io/name: techdomov
    app.kubernetes.io/component: redis
spec:
  serviceName: redis-svc
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: techdomov
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: techdomov
        app.kubernetes.io/component: redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard-rwo"
        resources:
          requests:
            storage: 5Gi
